<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Automation" Id="{b27fc8f4-f2b8-4f72-aca2-7369df292877}">
    <Declaration><![CDATA[VAR_GLOBAL
    // Execute flags for vacuum system operations
    {attribute 'pytmc' := '
        pv: PLC:DREAM:OPERATION
        io: io
    '}
    iq_eOperation : E_Op;

    {attribute 'pytmc' := '
        pv: PLC:DREAM:OPERATION:CANCEL
        io: o
    '}
    i_bCancel : BOOL;

    {attribute 'pytmc' := '
        pv: PLC:DREAM:OPERATION:RESET_ERROR
        io: o
    '}
    i_bResetError : BOOL;

    {attribute 'pytmc' := '
        pv: PPLC:DREAM:OPERATION:BUSY
        io: i
        field: ZNAM NOT_BUSY
        field: ONAM BUSY
    '}
    q_bBusy : BOOL;

    {attribute 'pytmc' := '
        pv: PLC:DREAM:OPERATION:ERROR
        io: i
        field: ZNAM OK
        field: ONAM ERROR
        field: ZSV NO_ALARM
        field: OSV MAJOR
    '}
    q_bError : BOOL;

    {attribute 'pytmc' := '
        pv: PLC:DREAM:OPERATION:MESSAGE
        io: i
    '}
    q_sMessage : STRING(EPICS_STRING_SIZE);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>